--- a/sass/new.sass
+++ b/sass/new.sass
@@ -1,6 +1,7 @@
 @import 'elements'
 .breadcrumbs
     padding: 20px 0 0
+    margin: 0
     &-item
 
     &__link
@@ -14,16 +15,10 @@
             content: '>'
             margin-left: 8px
 
-.info
+.inf
     padding: 50px 0
     &-box
-        display: flex
-        align-items: stretch
         justify-content: space-between
-        background-color: #fff
-        border-radius: 10px
-        box-shadow: 0px 2px 20px 0px #0000000D
-        overflow: hidden
 
     &__content
         padding: 40px
@@ -53,6 +48,7 @@
     padding: 50px 0
     position: relative
     z-index: 1
+    overflow: hidden
 
     &__headline
         margin-bottom: 60px
@@ -241,6 +237,29 @@
     &-form
         gap: 10px
 
+    &-row
+        gap: 20px
+        width: 100%
+        margin-top: 82px
+
+    &-item
+        padding: 40px
+        width: 33.33%
+        &__heading
+            font-size: 24px
+            line-height: 28.44px
+            font-weight: 500
+            gap: 20px
+            height: 50px
+            object-fit: contain
+            margin-bottom: 46px
+
+        &__text
+            max-width: 90%
+            font-weight: 300
+            font-size: 18px
+            line-height: 22.33px
+
 .how
     padding: 50px 0
     &-box
@@ -383,6 +402,7 @@
                 max-width: unset
                 button
                     height: 5px
+
                 &:not(.slick-active)
                     button
                         background-color: rgba(222, 222, 222, 1)
@@ -423,7 +443,7 @@
         line-height: 21.33px
         margin: 0
 
-    &-lists
+    &-list
         font-size: 16px
         line-height: 18.96px
         font-weight: 300
@@ -458,3 +478,192 @@
 
         min-height: 50%
         padding: 30px
+
+.serv
+    padding: 50px 0 60px
+    &__heading
+        margin-bottom: 40px
+
+    &-box
+        padding: 40px
+        background: rgba(226, 220, 247, 1)
+
+    &-list
+        font-weight: 500
+        font-size: 16px
+        line-height: 18.96px
+        margin-bottom: 30px
+        li
+            background-image: url('../img/real-estate/ic-round_check.svg')
+            background-repeat: no-repeat
+            background-position: center left
+            padding: 5.5px 0 5.5px 50px
+            margin-bottom: 20px
+            &:last-of-type
+                margin-bottom: 0
+
+    &-row
+        gap: 20px
+
+    &-item
+        min-width: 36%
+        padding: 20px
+        align-items: flex-start
+        &:first-child
+            width: 62.378%
+
+        &__row
+            gap: 8px
+
+        &.--orange
+            background-color: #FD7949
+            color: white
+
+        &__heading
+            font-size: 20px
+            font-weight: 500
+            line-height: 23.7px
+            margin: 0 0 20px
+
+        &__text
+            font-weight: 300
+            font-size: 16px
+            line-height: 18.96px
+            margin: 0 0 40px
+
+        .btn
+            margin-top: auto
+
+.req
+    padding: 60px 0
+    &-col
+        max-width: 513px
+
+    &-box
+        color: white
+        padding: 40px
+        box-shadow: 0px 2px 20px 0px #0000000D
+
+    &__heading
+        margin-bottom: 20px
+
+    &__text
+        font-size: 18px
+        line-height: 21.33px
+        font-weight: 300
+        margin-bottom: 40px
+
+    &__bg
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        object-fit: cover
+        z-index: -111
+
+.rev
+    padding: 60px 0
+    &-box
+        padding: 40px
+
+    &-row
+        gap: 20px
+        width: 100%
+
+    &-col
+        width: 25%
+        gap: 20px
+
+    &-item
+        &__header
+            gap: 20px
+            padding: 16px 20px
+            background: #F3F3F3
+            margin: 0
+
+        &__name
+            font-size: 20px
+            line-height: 23.7px
+            font-weight: 500
+
+        &__stars
+            display: block
+
+        &__text
+            padding: 25px 20px
+            font-weight: 300
+            font-size: 16px
+            line-height: 18.96px
+
+.blg
+    background-color: #fff
+    padding: 80px 0
+    margin: 60px 0
+    &-row
+        justify-content: space-between
+        margin-bottom: 78px
+        &:last-of-type
+            margin-bottom: 0
+
+    &-title
+        max-width: 44.308%
+
+    &__heading
+        color: var(--clr-att-second)
+        margin: 0 0 40px
+
+    &__text
+        font-weight: 300
+        font-size: 18px
+        line-height: 21.33px
+
+    &__img
+        width: 49.231%
+        border-radius: 10px
+        display: block
+        object-fit: cover
+
+.ques
+    box-shadow: 0px 2px 20px 0px #0000000D
+    margin: 60px 0 0
+    position: relative
+    z-index: 1
+    padding: 40px 0 80px
+    text-align: center
+    color: white
+    &__bg
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        object-fit: cover
+        z-index: -11
+        pointer-events: none
+
+    &__heading
+        font-weight: 500
+        font-size: 30px
+        line-height: 35.55px
+        margin: 0 0 40px
+
+    &__text
+        font-size: 20px
+        line-height: 23.7px
+        font-weight: 500
+        margin: 0 0 40px
+
+    &-form
+        gap: 10px
+        max-width: 1216px
+        margin: 0 auto
+        input
+            width: 63.46%
+
+        .btn
+            width: 21.2%
+
+    textarea
+        padding: 16px 20px 0
+        resize: none
