--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -79,9 +79,15 @@ b, strong
         background: rgba(226, 220, 247, 1)
         color: var(--clr-att)
 
-.slick-slider 
-    display: block !important
+.slick
+    &-slider
+        display: block !important
+
     
+
+.section
+    padding: 50px 0
+
 .slick-dots-gray
     .slick
         &-dots
