--- a/sass/new.sass
+++ b/sass/new.sass
@@ -23,7 +23,6 @@
     &__content
         padding: 40px
         width: 50%
-        max-width: 580px
 
     &__heading
         font-weight: 500
@@ -34,15 +33,31 @@
         font-size: 18px
         line-height: 21.33px
 
-    &__image
+    &__img
         width: 50%
+        img
+            width: 100%
+            height: 100%
+            object-fit: cover
+            max-width: 100%
+            display: block
 
-    &__image img
-        width: 100%
-        height: 100%
-        object-fit: cover
-        max-width: 100%
-        display: block
+    @media screen and ( max-width: 900px )
+        &-box
+            flex-direction: column-reverse
+
+        &__headline
+            text-align: center
+            margin-bottom: 40px
+
+        &__img
+            width: 100%
+            img
+                border-radius: 10px
+
+        &__content
+            width: 100%
+            max-width: 100%
 
 .property
     // padding: 50px 0
@@ -89,8 +104,11 @@
         &-list
             overflow: visible
 
+    &-controls
+        margin: 0 0 0 auto
+
     &-counter
-        margin: 0 32px 0 auto
+        margin: 0 32px 0 0
         font-weight: 500
         font-size: 42px
         line-height: 49.77px
@@ -116,7 +134,7 @@
         padding: 20px
         gap: 20px
 
-        &__title
+        &__heading
             font-size: 20px
             line-height: 23.7px
             font-weight: 500
@@ -149,6 +167,55 @@
         width: calc(53.764% - 10px)
         &:nth-of-type(2)
             width: calc( 46.237% - 10px )
+
+    @media screen and ( max-width: 1020px)
+        &-controls
+            display: none
+
+        .slick
+            &-slide
+                margin-right: 10px
+                width: calc( 100vw - 20px )
+
+        &__headline
+            width: 100%
+
+        &-item
+            margin: 0
+
+    @media screen and ( max-width: 750px)
+        &-item
+            &-header
+                padding: 20px
+                min-height: 110px
+                &__bg
+                    border-radius: 10px
+
+                &__heading
+                    font-size: 24px
+                    line-height: 28.44px
+
+            .btn
+                width: 100%
+
+        &-details
+            gap: 10px
+            &__heading
+                font-size: 15px
+                line-height: 17.78px
+                margin-bottom: 20px
+
+            &__list li,
+            &__text,
+            &__note
+                font-size: 12px
+                line-height: 14.22px
+
+        &-col
+            width: 100%
+            margin-bottom: 10px
+            &:nth-child(2)
+                display: none
 
 .included
     margin: 50px 0 100px
@@ -620,57 +687,74 @@
         z-index: -111
 
 .rev
-    // padding: 60px 0
     &-box
         padding: 40px
 
-    &-row
-        gap: 20px
-        width: 100%
-
-    &-col
-        width: 25%
-        gap: 20px
-
     &-item
-        &__header
-            gap: 20px
-            padding: 16px 20px
-            background: #F3F3F3
-            margin: 0
+        gap: 12px
 
-        &__name
-            font-size: 20px
-            line-height: 23.7px
-            font-weight: 500
+    &__icon
+        width: 34px
+        height: 34px
+        border-radius: 50%
+        min-width: 34px
 
-        &__stars
+    &__name
+        font-size: 16px
+        line-height: 24px
+        font-weight: 500
+        margin: 0 0 4px
+
+    &__time
+        font-size: 14px
+        line-height: 19.6px
+        font-weight: 400
+        color: #707D89
+        margin: 0
+
+    &__text
+        font-size: 14px
+        line-height: 19.6px
+        font-weight: 400
+        margin: 8px 0 0
+
+    &__info
+        gap: 12px
+        margin: 0
+        img
             display: block
 
-        &__text
-            padding: 25px 20px
-            font-weight: 300
-            font-size: 16px
-            line-height: 18.96px
+    &-answer
 
-    @media screen and ( min-width: 1200px )
-        &-slider
-            display: none
+    &-slide
+        background-color: #F5F6F8
+        padding: 24px
+        border-radius: 10px
+
+    &-answer
+        margin-top: 20px
+        padding: 20px 24px 24px
+
+    .slick
+        &-slide
+            padding: 0 12px
+
     @media screen and ( max-width: 1200px )
-        &__heading
-            text-align: center
-
-        &-row
-            display: none
-
         &-box
             padding: 40px 0
 
+        &__heading
+            text-align: center
+            padding: 0 40px
+
         .slick
+            &-list
+                padding: 0 12px
+
             &-dots
-                padding: 0
-            &-slide
-                padding: 5px 30px 35px
+                li
+                    flex: unset
+                    min-width: 10%
 
 .blg
     background-color: #fff
