more mobile setions

--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -16,6 +16,14 @@
             line-height: 35.55px
             margin-bottom: 40px
 
+        &_03
+            font-size: 20px
+            line-height: 23.7px
+
+        &_03
+            font-size: 24px
+            line-height: 28.44px
+
 .c
     &-main
         color: var(--clr-att)
@@ -121,3 +129,24 @@ b, strong
 
     &-jb
         justify-content: space-between
+
+.wrap-new
+    @media screen and ( max-width: 1024px )
+        .btn, input
+            height: 50px
+            width: 100%
+
+    @media screen and ( max-width: 800px )
+        .h_03, .h_02
+            text-align: center
+
+@media screen and ( max-width: 700px )
+    .section
+        padding: 40px 0
+
+    .box
+        padding: 20px
+        &__text
+            font-size: 15px
+            line-height: 17.78px
+            margin-bottom: 20px
