--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -104,7 +104,7 @@ b, strong
     .slick
         &-dots
             padding-top: 35px
-            display: flex
+            flex-wrap: nowrap
             li
                 button
                     height: 5px
@@ -143,6 +143,12 @@ b, strong
         .h_03, .h_02
             text-align: center
 
+@media screen and ( min-width: 700px )
+    .tgl-mob
+        * 
+            margin: 0 !important
+        &__btn 
+            display: none
 @media screen and ( max-width: 700px )
     .section
         padding: 40px 0
@@ -153,3 +159,48 @@ b, strong
             font-size: 15px
             line-height: 17.78px
             margin-bottom: 20px
+
+    .slick-dots-gray
+        .slick
+            &-dots
+                padding: 20px 15px 0
+                li
+                    min-width: unset
+                    width: 30%
+                    flex: none
+
+    .tgl-mob
+        position: relative
+        z-index: 1
+        overflow: hidden
+        &::after
+            position: absolute
+            content: ''
+            display: block
+            bottom: 0
+            left: 0
+            width: 100%
+            height: 1px
+            box-shadow: 0px -12px 30px 60px white
+            opacity: 1
+            transition: all ease .3s
+
+        p
+            transition: all ease .5s
+            overflow: hidden
+            margin: 0
+            max-height: 70px
+
+        &.is__show
+            &::after
+                opacity: 0
+
+            p
+                max-height: 500px
+
+        &__btn
+            width: 50px
+            height: 50px
+            margin: 0 auto
+            &::before
+                transform: rotate(90deg)
