--- a/sass/_elements.sass
+++ b/sass/_elements.sass
@@ -217,3 +217,51 @@ b, strong
             margin: 0 auto
             &::before
                 transform: rotate(90deg)
+
+.footer
+
+    .logos-wrap
+        display: flex
+
+    .logo-wrap
+        .logo
+            width: 9.7rem
+            height: 9.7rem
+            &-title
+                padding-left: 2.6rem
+
+            img
+                display: block
+                object-fit: contain
+                height: 100%
+
+    .pays-wrap
+        .list
+            img
+                object-fit: contain
+
+    @media screen and ( max-width: 600px )
+        text-align: center
+        .menu-wrap
+            margin: 0 0 5px 0
+            .menu
+                margin: 0 auto
+                padding: 0 0 30px 0
+
+        .contacts-wrap
+            margin: 0 0 25px 0
+            align-items: center
+            flex-direction: column
+
+        .logos-wrap
+            max-width: 250px
+            margin: 0 auto 60px
+            gap: 40px
+
+        .logo-wrap
+            margin: 0 auto
+            flex-direction: column
+            align-items: center
+            .logo
+                &-title
+                    padding: 2rem 0 0
