--- a/sass/new.sass
+++ b/sass/new.sass
@@ -638,7 +638,9 @@
     &-slider
         @media screen and ( min-width: 800px )
             padding-right: 40px
-            min-width: 58%
+            min-width: 55%
+            max-width: 60%
+            justify-content: space-between
             position: absolute
             top: 50%
             right: 0
@@ -646,14 +648,16 @@
 
     &-slide
         text-align: center
-        margin: 0 20px
+        margin: 0 
         &__text
             text-transform: uppercase
             font-size: 16px
             font-weight: 400
             line-height: 18.96px
+
         img
             min-width: 50%
+            max-width: 90%
             min-height: 1vw
             display: block
             margin: 0 auto
